fixes in db and new features to item module